[package]
name = "pledger"
version = "0.1.0"
authors = ["Samuel Fekete"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.3", features = ["serde"] }
csv = "1.1"
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
async-stream = "0.3"
tokio = { version = "1", features = ["full"] }
